# ficto

./: .readthedocs.yaml  LICENSE  PyPi.md  PyPi.txt  README.md  config.yaml  init_setup.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  python-publish.yml
docs/: conf.py  config.rst  ficto.core.rst  ficto.helper.rst  ficto.rst  index.rst  modules.rst
ficto/: main.py
ficto/core/: generate.py
ficto/helper/: builder.py
src/ficto/: main.py
src/ficto/core/: generate.py
src/ficto/helper/: builder.py  data_module.py
tests/: test_gen.py
tests/unit/: unit_test.py
