[metadata]
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
install_requires = 
    numpy==1.22.0
    pandas==2.1.3
    python-dateutil==2.8.2
    pytz==2023.3.post1
    PyYAML==6.0.1
    six==1.16.0
    tzdata==2023.3
python_requires = >=3.8

[options.extras_require]
testing =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0

[options.package_data]
ficto = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py