[metadata]
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
install_requires = 
    numpy
    pandas
    python-dateutil
    pytz
    PyYAML
    six
    tzdata
    sphinx-rtd-theme
python_requires = >=3.8

[options.extras_require]
testing =
    pytest
    mypy
    flake8
    tox
    black

[options.package_data]
ficto = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py